--- a/Index.html
+++ b/Index.html
@@ -2,38 +2,71 @@
 <html lang="en">
 
 <head>
+    <!--Base Files-->
     <meta description="" charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/javascript.js"></script>
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <!--/Bootstrap-->
     <!--Meta Tags-->
     <meta name="author" content="Ashwin Goel">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--/Meta Tags-->
-
 </head>
 <body>
+<!--
 <div class="preloader">
     <img src="img/loader.svg" alt="Loading...">
-</div>
+</div>-->
 <!--====================Nav Bar===================-->
+    <nav>
+        <ul>
+            <li>
+                <a href="#home">Home</a>
+            </li>
+            <li>
+                <a href="#about_me">About Me</a>
+            </li>
+            <li>
+                <a href="#projects">Projects</a>
+            </li>
+            <li>
+                <a href="#gallery">Gallery</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+            <li>
+                <a href="#blog">Blog</a>
+            </li>
+        </ul>
+    </nav>
+</div>
 
+<!--====================Body===================-->
 
+<div id="home" class="scrollto white_bg">
+    <!-- Your content goes here -->
 
-<!--====================/Nav Bar===================-->
-
+</div>
+<div id="about" class="scrollto white_bg">
+    <!-- Your content goes here -->
+</div>
+<div id="services" class="scrollto white_bg">
+    <!-- Your content goes here -->
+</div>
+<div id="contact" class="scrollto white_bg">
+    <!-- Your content goes here -->
+</div>
 
 
 <!--====================Footer===================-->
 
-<!--====================/Footer===================-->
 
+<!--=====================Script-=====================-->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </body>
 </html>
