particle.js added. To be configured properly

--- a/index.html
+++ b/index.html
@@ -42,22 +42,43 @@
         </ul>
     </nav>
 </div>
+<!--====================Cover===================-->
+
+<!-- scripts -->
+<script src="js/particles.js"></script>
+<script src="js/app.js"></script>
+<script>
+    particlesJS.load('particles-js', 'particles.json', function() {
+        console.log('particles.js loaded - callback');
+</script>
+<div id="particles-js">
+
+    <!--<div id="home">-->
+        <!--<div class="bg">-->
+
+        <!--</div>-->
+
+    <!--</div>-->
+</div>
+
+<!-- stats - count particles -->
+
+
 
 <!--====================Body===================-->
 
-<div id="home" class="scrollto white_bg">
-    <!-- Your content goes here -->
 
+<!--<div id="about">
+    &lt;!&ndash; Your content goes here &ndash;&gt;
+
+    </pre>
 </div>
-<div id="about" class="scrollto white_bg">
-    <!-- Your content goes here -->
+<div id="services">
+    &lt;!&ndash; Your content goes here &ndash;&gt;
 </div>
-<div id="services" class="scrollto white_bg">
-    <!-- Your content goes here -->
-</div>
-<div id="contact" class="scrollto white_bg">
-    <!-- Your content goes here -->
-</div>
+<div id="contact">
+    &lt;!&ndash; Your content goes here &ndash;&gt;
+</div>-->
 
 
 <!--====================Footer===================-->
