particle.js configured

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--Base Files-->
     <meta description="" charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" media="screen" href="css/style.css">
     <script src="js/javascript.js"></script>
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -44,22 +44,18 @@
 </div>
 <!--====================Cover===================-->
 
+
+
+<div id="particles-js">
+
+    <div id="home">
+
+    </div>
+</div>
 <!-- scripts -->
 <script src="js/particles.js"></script>
 <script src="js/app.js"></script>
-<script>
-    particlesJS.load('particles-js', 'particles.json', function() {
-        console.log('particles.js loaded - callback');
-</script>
-<div id="particles-js">
 
-    <!--<div id="home">-->
-        <!--<div class="bg">-->
-
-        <!--</div>-->
-
-    <!--</div>-->
-</div>
 
 <!-- stats - count particles -->
 
@@ -68,16 +64,16 @@
 <!--====================Body===================-->
 
 
-<!--<div id="about">
-    &lt;!&ndash; Your content goes here &ndash;&gt;
+<div id="about">
+    <!-- Your content goes here -->
 
-    </pre>
+
 </div>
 <div id="services">
-    &lt;!&ndash; Your content goes here &ndash;&gt;
+    <!-- Your content goes here -->
 </div>
 <div id="contact">
-    &lt;!&ndash; Your content goes here &ndash;&gt;
+    <!-- Your content goes here -->
 </div>-->
 
 
