--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!--Meta Tags-->
     <meta name="author" content="Ashwin Goel">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
 </head>
 <body>
 <!--
@@ -19,7 +21,34 @@
     <img src="img/loader.svg" alt="Loading...">
 </div>-->
 <!--====================Nav Bar===================-->
-    <nav>
+
+
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#projects">Projects</a>
+            </li><li class="nav-item">
+                <a class="nav-link" href="#gallery">Gallery</a>
+            </li><li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
+            </li>
+
+        </ul>
+    </div>
+</nav>
+
+    <!--<nav>
         <ul>
             <li>
                 <a href="#home">Home</a>
@@ -40,50 +69,75 @@
                 <a href="#blog">Blog</a>
             </li>
         </ul>
-    </nav>
-</div>
-<!--====================Cover===================-->
+    </nav>-->
 
+<!--==================== Particles ===================-->
 
+<!--<div id="particles-js">
+    <br>
+    <br>
+    <br>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-<div id="particles-js">
+    <div >-->
 
-    <div id="home">
+<div id="home">
 
-    </div>
-</div>
+</div>   <!--Welcome to my blog.. fadein and slide from left to front..js-->
+<!--</div>-->
 <!-- scripts -->
-<script src="js/particles.js"></script>
-<script src="js/app.js"></script>
-
-
-<!-- stats - count particles -->
-
-
 
 <!--====================Body===================-->
 
 
-<div id="about">
+<div id="about"  class="section black_bg">
+    <div class="container">
+        <div class="row">
     <!-- Your content goes here -->
+    <div id="me_img" class="col-lg-4 col-md-4 col-sm-12 align-items-center">
+        <img src="img/me.png">
+    </div>
+
+    <div id="me_txt" class=" col-lg-8 col-md-8  col-sm-12">
+        <h1 class="heading">About Me</h1>
+        <br>
+        <br>
+        <p class="text">Description</p>
 
 
+    </div>
+
+
+    </div>
+
 </div>
-<div id="services">
+</div>
+
+<div id="services" class="section white_bg">
+    <pre>
+Hello 
+</pre>
     <!-- Your content goes here -->
 </div>
-<div id="contact">
+<div id="contact" class="section black_bg">
+    <pre>
+Hello
+</pre>
     <!-- Your content goes here -->
-</div>-->
+</div>
 
 
 <!--====================Footer===================-->
+<div id="footer">
 
 
+</div>
 <!--=====================Script-=====================-->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="js/particles.js"></script>
 
+<script src="js/app.js"></script>
 </body>
 </html>
