--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 
 <head>
     <!--Base Files-->
-    <meta description="" charset="UTF-8">
-    <title>Title</title>
+    <title>Ash</title>
     <link rel="stylesheet" media="screen" href="css/style.css">
     <script src="js/javascript.js"></script>
+    <!--Swiper slideshow-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.0/js/swiper.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.0/css/swiper.min.css" />
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!--Meta Tags-->
+    <meta description="My website" charset="UTF-8">
     <meta name="author" content="Ashwin Goel">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 
 </head>
 <body>
@@ -20,76 +22,45 @@
 <div class="preloader">
     <img src="img/loader.svg" alt="Loading...">
 </div>-->
+
+
 <!--====================Nav Bar===================-->
+<!--Home, About, Projects, Gallery, Contact-->
 
-
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-md fixed-top">
+    <a class="navbar-brand" href="#">Logo</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
         <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item">
+                <a class="nav-link" href="#home">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#about">About</a>
+                <a class="nav-link" href="#about">About Me</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#projects">Projects</a>
-            </li><li class="nav-item">
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="#gallery">Gallery</a>
-            </li><li class="nav-item">
+            </li>
+             <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
             </li>
+
 
         </ul>
     </div>
 </nav>
 
-    <!--<nav>
-        <ul>
-            <li>
-                <a href="#home">Home</a>
-            </li>
-            <li>
-                <a href="#about_me">About Me</a>
-            </li>
-            <li>
-                <a href="#projects">Projects</a>
-            </li>
-            <li>
-                <a href="#gallery">Gallery</a>
-            </li>
-            <li>
-                <a href="#contact">Contact</a>
-            </li>
-            <li>
-                <a href="#blog">Blog</a>
-            </li>
-        </ul>
-    </nav>-->
 
-<!--==================== Particles ===================-->
-
-<!--<div id="particles-js">
-    <br>
-    <br>
-    <br>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-    <div >-->
-
-<div id="home">
-
-</div>   <!--Welcome to my blog.. fadein and slide from left to front..js-->
-<!--</div>-->
-<!-- scripts -->
-
-<!--====================Body===================-->
-
-
+<!--==================== HOME ===================-->
+<!--Background Image, Hera heading, Fade in from left, Particle.js-->
+<div id="home"></div>
+<!--====================ABOUT===================-->
+<!--My pic in the left centre aligned, Then about me column in the right-->
 <div id="about"  class="section black_bg">
     <div class="container">
         <div class="row">
@@ -98,46 +69,149 @@
         <img src="img/me.png">
     </div>
 
-    <div id="me_txt" class=" col-lg-8 col-md-8  col-sm-12">
+    <div id="me_txt" class="col-md-8 ">
         <h1 class="heading">About Me</h1>
-        <br>
-        <br>
-        <p class="text">Description</p>
+        <p class="description">
+            Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello
+            Hello Hello Hello Hello Hello Hello Hello Hello
+            Hello Hello Hello Hello Hello Hello Hello Hello
 
+        </p>
+    </div>
+    </div>
+</div>
+</div>
+
+<!--====================PROJECTS===================-->
+<!--Displays some of my projects in rectangular fancy big responsive tabs-->
+<div id="projects" class="section white_bg">
+    <div id="home_2">
 
     </div>
-
-
+</div>
+<!--====================GALLERY===================-->
+<!--Gallery with slider and some of my pics-->
+<div id="gallery" class="section black_bg">
+    <div class="container">
+    <div class="row">
+        <div class="col">
+            <div  id="me_txt">
+        <h1 class="heading">Gallery</h1>
+    </div>
+        </div>
+    </div>
     </div>
 
-</div>
-</div>
-
-<div id="services" class="section white_bg">
-    <pre>
-Hello 
-</pre>
-    <!-- Your content goes here -->
-</div>
-<div id="contact" class="section black_bg">
-    <pre>
-Hello
-</pre>
-    <!-- Your content goes here -->
+    <style>
+        body {
+            background: #fff;
+            font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+            font-size: 14px;
+            color:#000;
+            margin: 0;
+            padding: 0;
+        }
+        .swiper-container {
+            width: 100%;
+            padding-top: 50px;
+            padding-bottom: 50px;
+        }
+        .swiper-slide {
+            background-position: center;
+            background-size: cover;
+            width: 300px;
+            height: 300px;
+        }
+    </style>
+    <div class="swiper-container">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide" style="background-image:url(img/me.png)"></div>
+            <div class="swiper-slide" style="background-image:url(img/me.png)"></div>
+            <div class="swiper-slide" style="background-image:url(img/me.png)"></div>
+            <div class="swiper-slide" style="background-image:url(img/me.png)"></div>
+            <div class="swiper-slide" style="background-image:url(img/me.png)"></div>
+            <div class="swiper-slide" style="background-image:url(img/me.png)"></div>
+            <div class="swiper-slide" style="background-image:url(img/me.png)"></div>
+            <div class="swiper-slide" style="background-image:url(img/me.png)"></div>
+            <div class="swiper-slide" style="background-image:url(img/me.png)"></div>
+        </div>
+        <!-- Add Pagination -->
+        <div class="swiper-pagination"></div>
+    </div>
+    </div>
+<!--====================CONTACT===================-->
+<!--Contact me section with a form, And my details-->
+<div id="contact" class="section white_bg">
+    <div  id="me_txt">
+        <div class="row">
+        <h1 class="heading col-lg-10">Contact Us</h1>
+        </div>
+    </div>
+    <form>
+        <div class="row justify-content-center">
+            <div class="col-3 ">
+                <input type="text" class="form-control" placeholder="First name">
+            </div>
+            <div class="col-3 ">
+                <input type="text" class="form-control" placeholder="Last name">
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-6 ">
+                <br>
+                <input type="email" class="form-control" placeholder="E-Mail">
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-6 ">
+                <br>
+                <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Message" rows="3"></textarea>
+            </div>
+        </div>
+    </form>
 </div>
 
 
 <!--====================Footer===================-->
+<!--Footer with my social media handles, a brief intro and my positions.-->
 <div id="footer">
 
 
 </div>
+
 <!--=====================Script-=====================-->
+<!--Slideshow-->
+<script>
+    var swiper = new Swiper('.swiper-container', {
+        effect: 'coverflow',
+        grabCursor: true,
+        centeredSlides: true,
+        slidesPerView: 'auto',
+        coverflowEffect: {
+            rotate: 50,
+            stretch: 0,
+            depth: 100,
+            modifier: 1,
+            slideShadows : true,
+        },
+        autoplay: {
+            delay: 2000,
+            disableOnInteraction: false,
+        },
+        keyboard: {
+            enabled: true,
+        },
+        pagination: {
+            el: '.swiper-pagination',
+        },
+    });
+</script>
+<!--Jquery-->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<!--Bootstrap-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="js/particles.js"></script>
-
 <script src="js/app.js"></script>
 </body>
 </html>
