--- a/index.html
+++ b/index.html
@@ -72,34 +72,46 @@
     <div id="me_txt" class="col-md-8 ">
         <h1 class="heading">About Me</h1>
         <p class="description">
-            Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello Hello
-            Hello Hello Hello Hello Hello Hello Hello Hello
-            Hello Hello Hello Hello Hello Hello Hello Hello
+            Content Content Content Content Content Content Content Content Content Content
+            Content Content Content Content Content Content Content Content Content Content
+            Content Content Content Content Content Content Content Content Content Content
+            Content Content Content Content Content Content Content Content Content Content
+            Content Content Content Content Content Content Content Content Content
+
 
         </p>
     </div>
     </div>
 </div>
 </div>
+<div id="home_2">
 
+</div>
 <!--====================PROJECTS===================-->
 <!--Displays some of my projects in rectangular fancy big responsive tabs-->
 <div id="projects" class="section white_bg">
-    <div id="home_2">
-
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div  id="me_txt">
+                    <h1 class="heading">Projects</h1>
+                </div>
+            </div>
+        </div>
     </div>
+
 </div>
 <!--====================GALLERY===================-->
 <!--Gallery with slider and some of my pics-->
 <div id="gallery" class="section black_bg">
     <div class="container">
-    <div class="row">
-        <div class="col">
-            <div  id="me_txt">
-        <h1 class="heading">Gallery</h1>
-    </div>
+        <div class="row">
+            <div class="col">
+                <div  id="me_txt">
+            <h1 class="heading">Gallery</h1>
+                </div>
+            </div>
         </div>
-    </div>
     </div>
 
     <style>
@@ -142,9 +154,13 @@
 <!--====================CONTACT===================-->
 <!--Contact me section with a form, And my details-->
 <div id="contact" class="section white_bg">
-    <div  id="me_txt">
+    <div class="container">
         <div class="row">
-        <h1 class="heading col-lg-10">Contact Us</h1>
+            <div class="col">
+                <div  id="me_txt">
+                    <h1 class="heading">Contact</h1>
+                </div>
+            </div>
         </div>
     </div>
     <form>
@@ -211,7 +227,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <!--Bootstrap-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<!--Particle js-->
 <script src="js/particles.js"></script>
 <script src="js/app.js"></script>
+<!--Easing js smooth scroll-->
 </body>
 </html>
