Hero-text added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <!--Base Files-->
     <title>Ash</title>
     <link rel="stylesheet" media="screen" href="css/style.css">
-    <script src="js/javascript.js"></script>
     <!--Swiper slideshow-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.0/js/swiper.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.0/css/swiper.min.css" />
@@ -55,10 +54,20 @@
     </div>
 </nav>
 
+<!--==================== HERO TEXT ===================-->
+
 
 <!--==================== HOME ===================-->
 <!--Background Image, Hera heading, Fade in from left, Particle.js-->
-<div id="home"></div>
+<div id="home">
+    <div class="hero-text">
+        <h1 id="1">These ain't bars..</h1>
+        <h1 id="2">It's just me</h1>
+        <h1 id="3">Taking a glimse</h1>
+        <h1 id="4">Of this Tech World!!</h1>
+
+    </div>
+</div>
 <!--====================ABOUT===================-->
 <!--My pic in the left centre aligned, Then about me column in the right-->
 <div id="about"  class="section black_bg">
@@ -223,8 +232,10 @@
     });
 </script>
 <!--Jquery-->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<script src="js/main.js"></script>
+
 <!--Bootstrap-->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <!--Particle js-->
