--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.0/css/swiper.min.css" />
     <!--fa css-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-
     <!--Bootstrap-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!--Meta Tags-->
     <meta description="My website" charset="UTF-8">
     <meta name="author" content="Ashwin Goel">
@@ -22,7 +20,7 @@
 </head>
 <body>
 <a href="#" class="backtotop">
-<i class="fas fa-chevron-circle-up"></i>
+    <i class="fas fa-chevron-circle-up"></i>
 </a>
 <!--
 <div class="preloader">
@@ -49,7 +47,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="#gallery">Gallery</a>
             </li>
-             <li class="nav-item">
+            <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
             </li>
         </ul>
@@ -74,23 +72,23 @@
 <div id="about"  class="section black_bg">
     <div class="container">
         <div class="row">
-    <!-- Your content goes here -->
-    <div id="me_img" class="col-lg-4 col-md-4 col-sm-12 align-items-center">
-        <img src="img/me.png">
-    </div>
+            <!-- Your content goes here -->
+            <div id="me_img" class="col-lg-4 col-md-4 col-sm-12 align-items-center">
+                <img src="img/me.png">
+            </div>
 
-    <div id="me_txt" class="col-md-8 ">
-        <h1 class="heading">About Me</h1>
-        <p class="description">
-            Content Content Content Content Content Content Content Content Content Content
-            Content Content Content Content Content Content Content Content Content Content
-            Content Content Content Content Content Content Content Content Content Content
-            Content Content Content Content Content Content Content Content Content Content
-            Content Content Content Content Content Content Content Content Content
-        </p>
+            <div id="me_txt" class="col-md-8 ">
+                <h1 class="heading">About Me</h1>
+                <p class="description">
+                    Content Content Content Content Content Content Content Content Content Content
+                    Content Content Content Content Content Content Content Content Content Content
+                    Content Content Content Content Content Content Content Content Content Content
+                    Content Content Content Content Content Content Content Content Content Content
+                    Content Content Content Content Content Content Content Content Content
+                </p>
+            </div>
+        </div>
     </div>
-    </div>
-</div>
 </div>
 <div id="home_2">
 
@@ -116,7 +114,7 @@
         <div class="row">
             <div class="col">
                 <div  id="me_txt">
-            <h1 class="heading">Gallery</h1>
+                    <h1 class="heading">Gallery</h1>
                 </div>
             </div>
         </div>
@@ -158,7 +156,7 @@
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
     </div>
-    </div>
+</div>
 <!--====================CONTACT===================-->
 <!--Contact me section with a form, And my details-->
 <div id="contact" class="section white_bg">
@@ -197,9 +195,9 @@
 <!--====================Footer===================-->
 <!--Footer with my social media handles, a brief intro and my positions.-->
 <footer>
-<div id="grad">
+    <div id="grad">
 
-</div>
+    </div>
 </footer>
 <!--=====================Script-=====================-->
 <!--Slideshow-->
@@ -234,11 +232,11 @@
 <!--Main js file-->
 <script src="js/main.js"></script>
 <!--Bootstrap-->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<!--fa icons-->
-<script src="https://use.fontawesome.com/1983f7fdbc.js"></script>
+<script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 <!--easing js-->
 <script src="lib/easing/easing.min.js"></script>
+<!--fa js-->
+<script src="https://use.fontawesome.com/1983f7fdbc.js"></script>
 
 <!--Particle js-->
 <!--<script src="js/particles.js"></script>-->
