--- a/index.html
+++ b/index.html
@@ -3,17 +3,11 @@
 <head>
     <!--Base Files-->
     <title>Ash</title>
-    <link rel="stylesheet" media="screen" href="css/style.css">
-    <!--Swiper js-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.0/js/swiper.min.js"></script>
-    <!--Swiper slideshow-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.0/css/swiper.min.css" />
+    <link rel="stylesheet"  href="css/style.css">
     <!--fa css-->
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!--Bootstrap-->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!--Jquery ui-->
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <!--Animate css-->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
     <!--Meta Tags-->
@@ -23,9 +17,10 @@
     <!--jquery-->
     <script src="lib/jquery/jquery.min.js"></script>
     <script>
-
-    $(window).onload(function(){
-        $('#loader').fadeOut("slow");
+        console.log('Loaded');
+        $(document).ready(function(){
+        $('#img_preloader').fadeOut("slow");
+        $('#loader').delay(1000).fadeOut(350);
     });
     </script>
 
@@ -33,7 +28,7 @@
 <body>
 <!--Preloader-->
 <div class="preloader" id="loader">
-    <img src="img/loader.svg" alt="Loading...">
+    <img id="img_preloader" src="img/loader.svg" alt="Loading...">
 </div>
 
 
@@ -87,7 +82,7 @@
 
 <!--====================ABOUT===================-->
 <!--My pic in the left centre aligned, Then about me column in the right-->
-<div id="about"  class="section black_bg">
+<div id="about"  class="section white_bg">
     <div class="container">
         <div class="row">
             <!-- Your content goes here -->
@@ -113,7 +108,7 @@
 </div>
 <!--====================PROJECTS===================-->
 <!--Displays some of my projects in rectangular fancy big responsive tabs-->
-<div id="projects" class="section white_bg">
+<div id="projects" class="section black_bg">
     <div class="container wow zoomIn">
         <div class="row">
             <div class="col">
@@ -127,7 +122,11 @@
 </div>
 <!--====================GALLERY===================-->
 <!--Gallery with slider and some of my pics-->
-<div id="gallery" class="section black_bg">
+<!--Swiper js-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.0/css/swiper.min.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.0/js/swiper.min.js"></script>
+
+<div id="gallery" class="section white_bg">
     <div class="container wow zoomIn">
         <div class="row">
             <div class="col">
@@ -177,7 +176,7 @@
 </div>
 <!--====================CONTACT===================-->
 <!--Contact me section with a form, And my details-->
-<div id="contact" class="section white_bg">
+<div id="contact" class="section black_bg">
     <div class="container wow zoomIn">
         <div class="row">
             <div class="col">
@@ -212,11 +211,11 @@
 </div>
 <!--====================Footer===================-->
 <!--Footer with my social media handles, a brief intro and my positions.-->
-<footer>
+<!--<footer>
     <div id="grad">
 
     </div>
-</footer>
+</footer>-->
 <!--=====================Script-=====================-->
 <!--Slideshow-->
 <script>
@@ -247,6 +246,9 @@
 <!--Jquery-->
 <script src="lib/jquery/jquery-migrate.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<!--Jquery ui-->
+<!--<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">-->
+
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script><!--Main js file-->
 <script src="js/main.js"></script>
 <!--Bootstrap-->
@@ -254,9 +256,22 @@
 <!--easing js-->
 <script src="lib/easing/easing.min.js"></script>
 <!--fa js-->
-<script src="https://use.fontawesome.com/1983f7fdbc.js"></script>
 <!--wow js-->
 <script src="lib/wow/wow.min.js"></script>
+<!--Firebase-->
+<script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script>
+<script>
+    // Initialize Firebase
+    var config = {
+        apiKey: "AIzaSyDAlmLfNXSz4-RZxbwE-Y2y3rOmE5Br6fQ",
+        authDomain: "ash36mywebsite.firebaseapp.com",
+        databaseURL: "https://ash36mywebsite.firebaseio.com",
+        projectId: "ash36mywebsite",
+        storageBucket: "",
+        messagingSenderId: "211789354632"
+    };
+    firebase.initializeApp(config);
+</script>
 
 
 <!--Particle js-->
