particle js configured, hero text slider added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Carter+One|Muli|Montserrat" rel="stylesheet">
 
+
 </head>
 <body>
 <!--Preloader-->
@@ -75,13 +76,27 @@
 
 <!--==================== HOME ===================-->
 <!--Background Image, Hera heading, Fade in from left, Particle.js-->
-<div id="home">
+<div id="particles-js">
 
-    <div class="hero-text">
+    <div id="myPageContent" class="container-fluid">
+        <section>
 
-        <h1 id="hero-1">These ain't bars..</h1>
-        <h1 id="hero-2">It's me taking a glimpse</h1>
-        <h1 id="hero-3">Of this Techy World!!</h1>
+
+            <div id="textSlider" class="row justify-content-center">
+
+                <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8 slideCol align-self-center">
+                    <div class="scroller1">
+                        <div class="inner">
+                            <p>Study</p>
+                            <p>Work</p>
+                            <p>Experience</p>
+                            <p>Passion</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
     <div id="mouse" class="scroller">
         <span class="scroll-text">Scroll down</span>
@@ -97,17 +112,19 @@
         <div class="row">
             <!-- Your content goes here -->
             <div id="me_img" class="col-lg-4 col-md-4 col-sm-12 align-items-center  wow rollIn">
-                <img src="img/me.png">
+                <img src="img/g0.png">
             </div>
 
             <div id="me_txt" class="col-md-8">
                 <h1 class="heading  wow zoomIn">About Me</h1>
                 <p class="description  wow fadeInRight">
-                    Content Content Content Content Content Content Content Content Content Content
-                    Content Content Content Content Content Content Content Content Content Content
-                    Content Content Content Content Content Content Content Content Content Content
-                    Content Content Content Content Content Content Content Content Content Content
-                    Content Content Content Content Content Content Content Content Content
+                    Hey! Did u see that person on the left(for despktop)/ top(for mobile)? It's me the developer
+                    of this website. I'm known as Ashwin. People also call me Ash. I call myself "The Silent Ocean"
+                    and also "A Mad Philosopher." You must be thinking why right? Forget it because you may not like
+                    going deep. So I like to write, philosophies as well as code. I like python because it isn't poisonous.
+                    I like web development as well and I'm still learning that. Also I wanna be a web security analyst in the
+                    near future because it originates from the word cyber security. Ohh cyber security.. Doesn't it sound really cool?
+                    Hell yeah!
                 </p>
             </div>
         </div>
@@ -201,15 +218,19 @@
             background-size: cover;
             width: 300px;
             height: 300px;
+            border-radius: 150px;
         }
     </style>
     <div class="swiper-container">
         <div class="swiper-wrapper">
-            <div class="swiper-slide" style="background-image:url(img/me.png)"></div>
-            <div class="swiper-slide" style="background-image:url(img/me.png)"></div>
-            <div class="swiper-slide" style="background-image:url(img/me.png)"></div>
-            <div class="swiper-slide" style="background-image:url(img/me.png)"></div>
-            <div class="swiper-slide" style="background-image:url(img/me.png)"></div>
+            <div class="swiper-slide" style="background-image:url(img/g0.png)"></div>
+            <div class="swiper-slide" style="background-image:url(img/g1.jpg)"></div>
+            <div class="swiper-slide" style="background-image:url(img/g2.jpg)"></div>
+            <div class="swiper-slide" style="background-image:url(img/g3.jpg)"></div>
+            <div class="swiper-slide" style="background-image:url(img/g8.jpg)"></div>
+            <div class="swiper-slide" style="background-image:url(img/g10.jpg)"></div>
+            <div class="swiper-slide" style="background-image:url(img/g6.jpg)"></div>
+
 
         </div>
         <!-- Add Pagination -->
