--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="https://use.fontawesome.com/1619b5fcd7.js"></script>
     <!--Linea icons css-->
     <link href="icons/_ICONFONT/styles.css" rel="stylesheet">
-
     <!--Bootstrap-->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!--Animate css-->
@@ -26,9 +25,8 @@
         $('#loader').delay(1000).fadeOut(350);
     });
     </script>
-
+    <!--Google font-->
     <link href="https://fonts.googleapis.com/css?family=Carter+One|Muli|Montserrat" rel="stylesheet">
-
 
 </head>
 <body>
@@ -71,17 +69,11 @@
     </div>
 </nav>
 
-<!--==================== HERO TEXT ===================-->
-
 
 <!--==================== HOME ===================-->
-<!--Background Image, Hera heading, Fade in from left, Particle.js-->
 <div id="particles-js">
-
-    <div id="myPageContent" class="container-fluid">
+    <div id="myPageContent" class="container-fluid wow slideInDown">
         <section>
-
-
             <div id="textSlider" class="row justify-content-center">
 
                 <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8 slideCol align-self-center">
@@ -98,7 +90,7 @@
             </div>
         </section>
     </div>
-    <div id="mouse" class="scroller">
+    <div id="mouse" class="scroller wow slideInLeft">
         <span class="scroll-text">Scroll down</span>
         <span class="icon-basic-magic-mouse"></span>
     </div>
@@ -112,7 +104,7 @@
         <div class="row">
             <!-- Your content goes here -->
             <div id="me_img" class="col-lg-4 col-md-4 col-sm-12 align-items-center  wow rollIn">
-                <img src="img/g0.png">
+                <img src="img/g0.jpg">
             </div>
 
             <div id="me_txt" class="col-md-8">
@@ -223,7 +215,7 @@
     </style>
     <div class="swiper-container">
         <div class="swiper-wrapper">
-            <div class="swiper-slide" style="background-image:url(img/g0.png)"></div>
+            <div class="swiper-slide" style="background-image:url(img/g0.jpg)"></div>
             <div class="swiper-slide" style="background-image:url(img/g1.jpg)"></div>
             <div class="swiper-slide" style="background-image:url(img/g2.jpg)"></div>
             <div class="swiper-slide" style="background-image:url(img/g3.jpg)"></div>
