--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     });
     </script>
     <!--Google font-->
-    <link href="https://fonts.googleapis.com/css?family=Carter+One|Muli|Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Carter+One|Muli|Montserrat|Lato" rel="stylesheet">
 
 </head>
 <body>
