mouse scroll down changed

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
     </div>
     <div id="mouse" class="scroller wow slideInLeft">
         <span class="scroll-text">Scroll down</span>
-        <span class="icon-basic-magic-mouse"></span>
+        <i class="fa fa-angle-double-down"></i>
+
     </div>
 </div>
 <!--====================Nav2===================-->
