--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
     </div>
     <div class="row">
-    <div class="pcard col-4">
+    <div class="pcard col-4 wow zoomIn">
         <img src="img/steg.jpg">
         <hr>
         <div class="pcard_head">Steganography</div>
@@ -153,7 +153,7 @@
         </div>
 
     </div>
-    <div class="pcard col-4">
+    <div class="pcard col-4 wow zoomIn">
         <img src="img/threading.jpg">
         <hr>
         <div class="pcard_head">MultiThreading</div>
@@ -166,7 +166,7 @@
         </div>
     </div>
 
-        <div class="pcard col-4">
+        <div class="pcard col-4 wow zoomIn">
         <img src="img/wless.jpg" style="width:250px; height: 210px">
         <hr>
         <div class="pcard_head">Modes of Wireless Connection</div>
@@ -211,7 +211,7 @@
             background-size: cover;
             width: 300px;
             height: 300px;
-            border-radius: 150px;
+            border-radius: 50%;
         }
     </style>
     <div class="swiper-container">
