--- a/index.html
+++ b/index.html
@@ -96,7 +96,6 @@
 
     </div>
 </div>
-<!--====================Nav2===================-->
 
 <!--====================ABOUT===================-->
 <!--My pic in the left centre aligned, Then about me column in the right-->
@@ -245,26 +244,26 @@
     <form>
 
         <div class="row justify-content-center">
-            <div class="col-3">
+            <div class="col-lg-3 col-md-6 col-sm-6">
                 <label for="txt1">First name</label>
 
                 <input type="text" id="txt1" class="form-control wow fadeInLeft">
             </div>
-            <div class="col-3 ">
+            <div class="col-lg-3 col-md-6 col-sm-6">
                 <label for="txt2">Last name</label>
 
                 <input type="text" id="txt2" class="form-control wow fadeInRight">
             </div>
         </div>
         <div class="row justify-content-center wow fadeInUp">
-            <div class="col-6 ">
+            <div class="col-lg-6 col-md-12 col-sm-12">
                 <br>
                 <label for="email">E-Mail</label>
                 <input type="email" id="email" class="form-control">
             </div>
         </div>
         <div class="row justify-content-center wow fadeInUp">
-            <div class="col-6 ">
+            <div class="col-lg-6 col-md-12 col-sm-12">
                 <br>
                 <label for="txt3">Message</label>
                 <textarea id="txt3" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
@@ -283,19 +282,19 @@
 <!--Footer with my social media handles, a brief intro and my positions.-->
 <footer>
     <div id="grad">
-        <div class="">
+        <div>
 
             <ul>
-                <li>
+                <li class="col-lg-2 col-md-4 col-sm-12">
                     <a href="https://www.facebook.com/ashwin36" target="_blank">Facebook</a>
                 </li>
-                <li>
-                    <a href="https://www.instagram" target="_blank">Instagram</a>
+                <li class="col-lg-2 col-md-4 col-sm-12">
+                    <a href="https://www.instagram.com/_ashwin_g_" target="_blank">Instagram</a>
                 </li>
-                <li>
+                <li class="col-lg-2 col-md-4 col-sm-12">
                     <a href="https://www.github.com/goelashwin36" target="_blank">Github</a>
                 </li>
-                <li>
+                <li class="col-lg-2 col-md-4 col-sm-12">
                     <a href="https://www.linkedin.com/in/goelashwin36/" target="_blank">LinkedIn</a>
                 </li>
 
